correcting security vulnerabilities